[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"

[profile.release_lto_off]
inherits = "release"
lto = "off"

[dependencies]
num-bigint = { version = "0.4.3", default-features = false }
tfhe = { version = "*", features = [ "boolean", "shortint", "integer", "aarch64-unix" ] }
hex = "0.4.3"
rand = "0.8.5"
rayon = "1.7.0"
lazy_static = "1.4.0"
logging_timer = "1.1.0"
env_logger = "0.11.3"
ctor = "0.2.4"

[features]
nightly-avx512 = ["tfhe/nightly-avx512"]
